// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Block with no props renders an unstyled div 1`] = `
<DocumentFragment>
  <div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`Block with props renders as span 1`] = `
<DocumentFragment>
  <span
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`Block with props renders with customBlock style preset 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #128293;
  color: #ffffff;
}

.emotion-0 svg {
  fill: #ffffff;
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`Block with props renders with spaceInline020 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin-right: 8px;
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`Block with props renders with spaceInset020 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding: 8px;
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`Block with props renders with spaceStack010 for xs, spaceStack020 for sm, and spaceStack030 for md breakpoints 1`] = `
<DocumentFragment>
  @media screen and (max-width: 479px) {
  .emotion-0 {
    margin-bottom: 4px;
  }
}

@media screen and (min-width: 480px) and (max-width: 767px) {
  .emotion-0 {
    margin-bottom: 8px;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    margin-bottom: 12px;
  }
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`Block with props renders with spaceStack020 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin-bottom: 8px;
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;
